--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,32 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+
+  <script>
+    (function () {
+      function resetRemUnit() {
+        var UI_WIDTH = 375; // 设计稿宽度 (这个要和UI保持一致)
+        var docElement = window.document.documentElement;
+        var width = docElement.clientWidth || 375;
+        // 设置htmlFontSize
+        var rate = width / (UI_WIDTH / 100);
+        docElement.style.fontSize = rate + 'px';
+        // 验证准确性
+        var div = window.document.createElement('div');
+        div.style.width = '1rem';
+        div.style.display = "none";
+        window.document.getElementsByTagName('head')[0].appendChild(div);
+        var realRate = parseFloat(window.getComputedStyle(div, null).getPropertyValue('width'));
+        if (rate !== realRate) {
+          // 补上损失的部分rate
+          docElement.style.fontSize = rate * (rate / realRate) + 'px';
+        }
+      }
+      resetRemUnit();
+      window.addEventListener('resize', resetRemUnit);
+    })();
+
+  </script>
 </head>
 
 <body>
